feat: Adicionanto cifrão no valor do resultado no exercicio 'produtos-com-desconto.html'

--- a/css/style.css
+++ b/css/style.css
@@ -120,4 +120,10 @@ input{
     flex-direction: row; /*estabelece a direção do alinhamento*/
     justify-content: center; /* centraliza no eixo horizontal/ principal*/ 
     align-items: center; /*alinha no eixo vertical/ secundário*/
+    gap: 1rem;
+}
+
+/* Adicionando o cifrão na classe criada 'monetario' */
+.monetario::before{
+    content: "R$ ";
 }
