--- a/css/navbar-sandwich.css
+++ b/css/navbar-sandwich.css
@@ -1,59 +1,101 @@
 @import url('https://fonts.googleapis.com/css2?family=Jersey+25&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
-/* *{
-    --cor-de-fundo:3839C;
-    --cor-de-hover:
-} */
-
 body{
-    min-height: 100vh; /* 100% da viewport height // determinar que o body deve ocupar toda a página*/
-    background-color: azure;
-
+    background-color: #232323;
+    color: #cdcdcd;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.menu-sandwich-oculto{
-    display: none;
-}
-
-.menu-sandwich{
-    height: 65px; /*Tamanho da altura da nav*/
-    background-color: #38393C; /*Cor de fundo da nav*/
-}
-
-.logo-menu{
+main{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    left: 0;
+    top: 0;
     display: flex;
-    background-color: #38393C;
-    height: 65px;
-    justify-content: space-between;
-}
-.logo span{
-    width: 90%;
-    color: azure;
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 25px;
-    font-weight: 700;
-    display: inline-flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
-    margin: 20px;
-    /* margin-inline-start: 2.5rem; */
+    align-items: center;
+
 }
 
-#btMenu{
-    width: 20%;
-    height: 90%;
-    margin: 3px;
-}
-#btFechar{
-    width: 20%;
-    height: 90%;
-    margin: 3px;
+.menu{
+    margin-left: 30px;
+    margin-top: 30px;
 }
 
-#menu-sandwich{
-    background-color: #ffffff;
+.menu .menu-linhas{
+    position: absolute;
+    z-index: 999;
+    width: 35px;
+    height: 35px;
+}
+
+.menu .menu-linhas span{
+    display: block;
+    width: 35px;
+    height: 5px;
+    margin-bottom: 10px;
+    background-color: #cdcdcd;
+    border-radius: 3px;
+    transition: all ease .2s;
+}
+
+.menu .menu-fake{
+    position: absolute;
+    z-index: 1000;
+    width: 35px;
+    height: 35px;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.menu .menu-fake:checked ~ .menu-linhas span {
+    background-color: #232323;
+
+}
+
+.menu .menu-fake:checked ~ .menu-linhas span:nth-child(1){
+    transform-origin: 0% 0%;
+    transform: rotate(45deg) scaleX(1.25);
+}
+.menu .menu-fake:checked ~ .menu-linhas span:nth-child(2){
+    opacity: 0;
+}
+.menu .menu-fake:checked ~ .menu-linhas span:nth-child(3){
+    transform-origin: 0% 100%;
+    transform: rotate(-45deg) scaleX(1.25);
+}
+
+.menu ul{
+    position: absolute;
+    z-index: 998;
+    left: 0;
+    top: 0;
+    width: 300px;
+    height: 100vh;
+    padding-top: 100px;
+    background-color: #ededed;
+    margin-left: -300px;
+    transition: all ease .2s;
+}
+
+.menu .menu-fake:checked ~ ul {
+    margin-left: 0px;
+}
+
+.menu ul li{
+    padding: 10px 30px;
+}
+
+.menu ul a{
     text-decoration: none;
-    text-transform: capitalize;
-    color: black;
+    color: #000000;
+    font-size: 22px;
+    transition: all ease .3s;
+}
+
+.menu ul li a:hover{
+    color: #999999;
 }
